<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <packaging>pom</packaging>

  <groupId>io.github.ace-design</groupId>

  <artifactId>2aa4.mesh</artifactId>

  <version>1.0</version>

  <name>McMaster :: CAS :: 2AA4 :: A2</name>

  <description>Mesh generator and visualizer</description>

  <modules>

    <module>generator</module>

    <module>io</module>

    <module>visualizer</module>

    <module>island</module>

    <module>pathfinder</module>

  </modules>

  <properties>

    <maven.compiler.source>17</maven.compiler.source>

    <maven.compiler.target>17</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  </properties>

  <dependencies>

    <dependency>

      <groupId>org.junit.jupiter</groupId>

      <artifactId>junit-jupiter</artifactId>

      <scope>test</scope>

    </dependency>

  </dependencies>

  <dependencyManagement>

    <dependencies>

      <dependency>

        <groupId>org.junit</groupId>

        <artifactId>junit-bom</artifactId>

        <version>5.9.2</version>

        <type>pom</type>

        <scope>import</scope>

      </dependency>

    </dependencies>

  </dependencyManagement>

  <build>

    <plugins>

      <plugin>

        <artifactId>maven-compiler-plugin</artifactId>

        <version>3.8.1</version>

      </plugin>

      <plugin>

        <artifactId>maven-surefire-plugin</artifactId>

        <version>3.0.0-M6</version>

      </plugin>

    </plugins>

  </build>

</project>
